--- a/src/components/head.ejs
+++ b/src/components/head.ejs
@@ -9,6 +9,7 @@
 <meta property="og:title" content="TITLE">
 <meta property="og:description" content="DESC">
 <meta property="og:url" content="https://static.page">
+<meta name="twitter:card" content="summary_large_image" />
 <meta property="og:image" content="https://static.page/img/OGP.png">
 <meta property="og:site_name" content="TITLE">
 <meta property="og:locale" content="ja_JP">
