--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -10,21 +10,11 @@
 //   color: $color-text-primary;
 // }
 
-.kaki-container {
+body {
   // noto sans
   font-family: "Noto Sans JP", sans-serif;
-  font-weight: 400;
-  overflow: hidden;
-  background-size: 100% auto;
-  background-repeat: repeat-y;
-  background-position: center 143vw;
-  @include mq-pc {
-    background-position: center 670px;
-  }
-  z-index: 2;
-  position: relative;
+  font-weight: 500;
 }
-
 
 .pc_only {
   @include mq-sp {
@@ -37,10 +27,3 @@
   }
 }
 
-.vjs-waiting {
-  visibility: hidden;
-  background: transparent;
-}
-.vjs-loading-spinner {
-  display: none !important;
-}
