--- a/src/components/main.ejs
+++ b/src/components/main.ejs
@@ -1,5 +1,3 @@
-<main>
-  MAIN
-</main>
+<canvas id="three-canvas"></canvas>
 
-<%- include('components/movieModal.ejs'); %>
+<div class="h-100svh-skel"></div>
