--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -211,3 +211,80 @@ img {
   font-family: "ER-Garamond";
   src: url("/fonts/EBGaramond-Italic.ttf");
 }
+
+html.water-page,
+html.water-page body {
+  /*  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; */
+}
+
+html.water-page {
+  main {
+    position: relative;
+    z-index: 3;
+  }
+
+  canvas {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+  }
+
+  .cls-1 {
+    fill: #fff;
+  }
+
+  .cls-2 {
+    fill: #008b93;
+  }
+
+  .cls-3 {
+    fill: #e83c3c;
+    fill: #008b93;
+  }
+  .center-logo {
+    opacity: 0;
+  }
+
+  .water-logo {
+    &-wrap {
+      overflow: hidden;
+      @include absCover();
+      @include vh(height, 100);
+      //position: fixed;
+      background-color: white;
+      z-index: 4;
+    }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    z-index: 5;
+  }
+}
+
+.fv {
+  height: 100vh;
+}
+main {
+  position: relative;
+}
+
+.copy {
+  @include vh(height, 100);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 70vw;
+  }
+}
