--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -233,7 +233,7 @@ html.water-page {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     z-index: 1;
   }
@@ -269,6 +269,10 @@ html.water-page {
     transform: translate(-50%, -50%);
     width: 70%;
     z-index: 5;
+    //background-color: red;
+    @include mq-sp {
+      width: 100%;
+    }
   }
 }
 
