--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -288,7 +288,24 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  img {
-    width: 70vw;
+  &__inner {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &__head {
+    width: 15%;
+    @include mq-sp {
+      width: 40%;
+    }
+  }
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10%;
+    @include mt(40);
+    @include mq-sp {
+      grid-template-columns: 1fr;
+    }
   }
 }
