--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -298,6 +298,14 @@ main {
     @include mq-sp {
       width: 40%;
     }
+
+    opacity: 0;
+    transform: translateY(200px);
+    &.inview {
+      opacity: 1;
+      transform: translateY(0px);
+      transition: transform 2s $easeOutQuint, opacity 1s;
+    }
   }
   &__content {
     display: grid;
@@ -306,6 +314,27 @@ main {
     @include mt(40);
     @include mq-sp {
       grid-template-columns: 1fr;
+    }
+  }
+
+  &__block {
+    &:nth-child(1) {
+      opacity: 0;
+      transform: translateY(200px);
+      &.inview {
+        opacity: 1;
+        transform: translateY(0px);
+        transition: transform 3s $easeOutQuint, opacity 1s;
+      }
+    }
+    &:nth-child(2) {
+      opacity: 0;
+      transform: translateY(200px);
+      &.inview {
+        opacity: 1;
+        transform: translateY(0px);
+        transition: transform 3s $easeOutQuint 0.4s, opacity 1s 0.4s;
+      }
     }
   }
 }
