--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,4 +7,113 @@
 @use "./foundation/reset";
 @use "./Index/fv";
 
+.words-block-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
 
+.logo-block {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  color: white;
+  top: 10%;
+  font-size: 42px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  line-height: 1;
+  &__txt {
+    transform-origin: top;
+    font-family: serif;
+    writing-mode: vertical-rl;
+    transform: scaleY(0.7);
+  }
+  &__logo {
+    margin-top: -100px;
+    width: 90px;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0;
+  }
+}
+.words-block {
+  position: absolute;
+
+  z-index: 10;
+  color: white;
+  // 縦書き
+  font-family: serif;
+  font-size: 24px;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+  gap: 10px;
+  line-height: 1.7;
+  transform: scaleY(0.7);
+  transform-origin: top;
+
+  &-1 {
+    left: 5%;
+    top: 10%;
+  }
+  &-2 {
+    left: 12%;
+    top: 44%;
+  }
+  &-3 {
+    left: 25%;
+    top: 60%;
+  }
+  &-4 {
+    left: 29%;
+    top: 8%;
+  }
+  &-5 {
+    left: 65%;
+    top: 10%;
+  }
+  &-6 {
+    left: 80%;
+    top: 20%;
+  }
+  &-7 {
+    left: 60%;
+    top: 65%;
+  }
+  &-8 {
+    left: 80%;
+    top: 60%;
+  }
+  &__head {
+    display: flex;
+    flex-direction: row-reverse;
+    span {
+      writing-mode: vertical-rl;
+    }
+  }
+  &__name {
+    font-size: 80%;
+    writing-mode: vertical-rl;
+    margin-bottom: -30px;
+    position: relative;
+  }
+}
+
+.line-wrap {
+  position: relative;
+}
+.hidden {
+  opacity: 0;
+}
+.line {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
