--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -117,3 +117,22 @@
   width: 100%;
   height: 100%;
 }
+
+.menu-list {
+  font-size: 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  color: white;
+  display: none;
+  &.hover {
+    display: block;
+    display: block;
+  }
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
