--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -403,3 +403,52 @@ body {
     color: white;
   }
 }
+
+.p5Canvas {
+  position: relative;
+}
+
+.tda-logo {
+  //width: 400px;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  perspective: 400px;
+  text-align: center;
+  &-1 {
+    transform-style: preserve-3d;
+    animation: rotate 10s linear infinite;
+    img {
+      transform: rotateX(-30deg) rotateZ(5deg) rotateY(5deg);
+    }
+  }
+  &-2 {
+    transform-style: preserve-3d;
+    animation: rotate 10s linear infinite -1s;
+    img {
+      transform: rotateX(40deg) rotateZ(-3deg) rotateY(-5deg);
+    }
+  }
+  &-3 {
+    transform-style: preserve-3d;
+    animation: rotate 10s linear infinite -2s;
+    img {
+      transform: rotateX(-30deg) rotateZ(0deg) rotateY(-10deg);
+    }
+    //animation: rotate 5s linear infinite;
+  }
+  @keyframes rotate {
+    0% {
+      transform: rotateY(0deg);
+    }
+    100% {
+      transform: rotateY(-360deg);
+    }
+  }
+  img {
+    height: 40px;
+    width: auto;
+    display: inline-block;
+  }
+}
