--- a/src/scss/common/_page-base.scss
+++ b/src/scss/common/_page-base.scss
@@ -389,11 +389,11 @@ main {
 
 .kura-about {
   height: 150vh;
-  border-top: 2px solid black;
+ // border-top: 2px solid black;
 }
 .kura-story {
   height: 150vh;
-  border-top: 2px solid black;
+  //border-top: 2px solid black;
 }
 
 body {
